Chore: remove deprecated API usage (#1807)